--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,11 @@
 
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script>
-        var socket = io();
-  
-        var form = document.getElementById('form');
-        var input = document.getElementById('input');
+        let socket = io();
+
+        let messages = document.getElementById('messages');
+        let form = document.getElementById('form');
+        let input = document.getElementById('input');
   
         form.addEventListener('submit', function(e) {
           e.preventDefault();
@@ -39,9 +40,11 @@
           }
         });
 
-        socket.on('chat msg', ()=>{
-          console.log("new message!");
-          
+        socket.on('chat msg', (msg)=>{
+          let item = document.createElement('li');
+          item.textContent = msg;
+          messages.appendChild(item);
+          window.scrollTo(0, document.body.scrollHeight);
         })
     </script>
   </body>
